k8/service.yml
apiVersion: networking.k8s.io/v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector: 
   app: nginx
  ports:
   protocol: TCP 
   port: 8080
   targetPort: 80
